--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ a {
   font-size: 16px;
   font-weight: 900;
   line-height: 40px;
-  text-align: start;
+  /* text-align: start; */
 }
 .navigation-link:hover,
 .navigation-link:focus,
@@ -236,6 +236,8 @@ a {
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
   background-color: transparent;
+
+  /* background-color: rgba(242, 242, 254, 1); */
 }
 .header__background {
   position: absolute;
@@ -243,7 +245,7 @@ a {
   right: 0;
   bottom: 0;
   left: 100%;
-
+  background-color: rgba(242, 242, 254, 1);
   z-index: -1;
   -webkit-transition: left 0.3s ease;
   transition: left 0.3s ease;
@@ -252,7 +254,10 @@ a {
   left: 0;
 }
 .header__button-wrapper {
-  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 .header__icon {
   display: none;
@@ -284,11 +289,11 @@ a {
 }
 
 .header__icon-button.is-open + .navigation__list {
-  background: rgba(121, 1, 25, 1);
+  background: rgba(54, 56, 92, 1);
 }
 
 .navigation.is-open {
-  background: rgba(121, 1, 25, 1);
+  background: rgba(54, 56, 92, 1);
 }
 
 .navigation {
@@ -307,7 +312,7 @@ a {
   position: relative;
 }
 .navigation.is-open {
-  background: rgba(121, 1, 25, 1);
+  background: rgba(54, 56, 92, 1);
 }
 
 .navigation__list {
@@ -333,7 +338,7 @@ a {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   z-index: 999;
-  background: rgba(121, 1, 25, 1);
+  background: rgba(54, 56, 92, 1);
 }
 .navigation__list.is-open {
   right: 0;
@@ -369,7 +374,19 @@ a {
 
 @media screen and (min-width: 1200px) {
   .header {
-    background-color: inherit;
+    background-color: rgba(242, 242, 254, 1);
+
+    padding: 8px 24px 8px 24px;
+    gap: 8px;
+    border-radius: 999px;
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .header {
+    /* background-color: inherit; */
     height: 100px;
     display: flex;
   }
@@ -420,8 +437,12 @@ a {
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    gap: 80px;
-    margin-left: 233px;
+    gap: 50px;
+    /* margin-left: 233px; */
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .navigation__link {
     font-weight: 400;
@@ -430,6 +451,7 @@ a {
     max-width: 200px;
     padding: 0%;
     height: 14px;
+    color: rgba(29, 19, 70, 1);
   }
 }
 
@@ -440,8 +462,11 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  /* width: 375px; */
   height: 780px;
-  background-image: url("/img/home/phone-back.png");
+  margin: auto;
+
+  background-image: url("/image/home/Section-1-Hero.png");
 }
 .home__wrapper {
   position: relative;
@@ -466,6 +491,7 @@ a {
   -ms-flex-direction: column;
   flex-direction: column;
   align-items: center;
+  margin-top: 670px;
 }
 
 .home__title-image {
@@ -496,51 +522,24 @@ a {
   padding: 10px;
 }
 .gallery__image {
-  width: 314.62px;
-  height: 570.64px;
+  width: 343px;
+  height: 154px;
+
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
 }
 
-@media screen and (min-width: 1200px) {
-  .reviews__item {
-    margin: 20px;
-    width: 386px;
-    height: 252px;
-    padding: 40px;
-    gap: 10px;
-    border-radius: 8px;
-    border: 1px;
-    opacity: 0px;
-    background: rgba(255, 255, 255, 1);
-    border: 1px solid rgba(61, 222, 253, 1);
-    display: flex;
-    align-items: center;
-  }
-}
-
-.reviews__button-container {
-  display: none;
-}
-.reviews__container {
+.gallery__container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.reviews__button--right {
-  position: relative;
-  top: 15px;
-  left: -30px;
-  background-color: transparent;
-  border: none;
-}
+
 @media screen and (min-width: 1000px) {
   .gallery__list {
     max-width: 750px;
   }
-  .reviews__button--right {
-    left: -75px;
-  }
+
   .reviews__container {
     gap: 40px;
   }
@@ -551,22 +550,78 @@ a {
     max-width: 1296px;
   }
 }
+/*  */
+.play {
+  background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
+}
+.play-image {
+  margin: auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.play__item {
+  cursor: pointer;
+  padding: 10px;
+}
+.play__image {
+  width: 343px;
+  /* height: 472px; */
+
+  -webkit-transition: width 0.3s ease;
+  transition: width 0.3s ease;
+}
+.play__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.play-image-desk {
+  display: none;
+}
+.play__list {
+  width: 375px;
+}
+
+/* @media screen and (min-width: 1000px) {
+  .play__list {
+    max-width: 750px;
+  }
+
+  .play__container {
+    gap: 40px;
+  }
+} */
+
+@media screen and (min-width: 1200px) {
+  .play-image-desk {
+    display: flex;
+    margin: auto;
+    width: 1440px;
+  }
+  .play__container {
+    display: none;
+  }
+  .reviews-title {
+    display: none;
+  }
+  .play-image {
+    display: none;
+  }
+}
 
 @media screen and (min-width: 1200px) {
   .home {
-    background-image: url("/img/home/back-desk.png");
-    height: 1000px;
-    width: 1440px;
     margin: auto;
+    height: 980px;
+
+    background-image: url("/image/home/Section-1-Hero\ \(1\).png");
   }
-  .home__title-image {
-    display: none;
-  }
+
   .home__google-button_link {
     width: 300px;
     height: 86px;
-    margin-top: 696px;
-    margin-left: -580px;
+    margin-top: 1px;
+    margin-left: -780px;
   }
 }
 
@@ -575,26 +630,27 @@ a {
   background-size: cover;
   background-position: center;
   padding-block: 60px;
+  background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
 }
-.advantages-title {
-  text-transform: uppercase;
-  font-family: Luckiest Guy;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 44px;
-  text-align: center;
-  color: rgba(211, 37, 35, 1);
-}
+
 .advantages-image {
-  width: 343px;
-  height: 1604px;
-  margin: 32px auto 48px;
+  width: 375px;
+  height: 1086px;
+
+  margin: 0 auto 0;
 }
 .advantages-image-desk {
   display: none;
 }
 
 @media screen and (min-width: 1200px) {
+  .advantages {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-block: 60px;
+    background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
+  }
   .advantages-title {
     display: none;
   }
@@ -604,53 +660,50 @@ a {
   .advantages-image-desk {
     display: flex;
     margin: auto;
+    width: 1440px;
+    /* height: 1406px; */
   }
 }
 
-.reviews {
+/*  */
+
+.features {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  /* padding-block: 60px; */
+  background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
 }
 
-.reviews-image {
+.features-image {
   width: 375px;
-  height: 1482px;
-  margin: 0 auto;
+  /* height: 1871px; */
+
+  margin: 0 auto 0;
 }
-.reviews-image-desk {
+.features-image-desk {
   display: none;
-}
-@media screen and (min-width: 1200px) {
-  .reviews-image {
-    display: none;
-  }
-  .reviews-image-desk {
-    display: flex;
-    margin: auto;
-  }
-}
-.about-one {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
 }
 
-.about-one-image {
-  width: 375px;
-  height: 1482px;
-  margin: 0 auto;
-}
-.about-one-image-desk {
-  display: none;
-}
 @media screen and (min-width: 1200px) {
-  .about-one-image {
+  .features {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-block: 60px;
+    background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
+  }
+  .features-title {
     display: none;
   }
-  .about-one-image-desk {
+  .features-image {
+    display: none;
+  }
+  .features-image-desk {
     display: flex;
     margin: auto;
+    width: 1440px;
+    /* height: 1406px; */
   }
 }
 
@@ -662,44 +715,16 @@ a {
   background-color: var(--accent-color);
   padding-top: 110px;
   padding-bottom: 103px;
+  background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
 }
 
-.gallery-button-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  gap: 26px;
-  margin-top: 26px;
+.gallery__image {
+  width: 343px;
+  height: 154px;
 }
-.slick-active .gallery__image {
-  width: 314.62px;
-  height: 570.64px;
-}
-.gallery-button {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  -webkit-transition: scale 0.3s ease;
-  transition: scale 0.3s ease;
-}
-
-.gallery-button:hover {
-  scale: 120%;
-}
-
-.button-visible {
-  display: none !important;
-}
-
-.gallery-button-icon {
-  width: 66.89px;
-  height: 70px;
+.gallery-title {
+  margin: auto;
+  width: 159px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -708,10 +733,10 @@ a {
     padding-top: 41px;
     padding-bottom: 65px;
   }
-
-  .gallery__nav-arrows {
-    display: none;
+  .gallery-title {
+    width: 283px;
   }
+
   .gallery__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -725,178 +750,29 @@ a {
     gap: 40px;
   }
   .gallery__image {
+    width: 1000px;
+    height: 450px;
+
+    top: 0.12px;
+    left: 1006.91px;
+    gap: 0px;
+    opacity: 0px;
+  }
+  /* .slick-active .gallery__image {
     width: 315.92px;
     height: 570.64px;
     top: 0.12px;
     left: 1006.91px;
     gap: 0px;
     opacity: 0px;
-  }
-  .slick-active .gallery__image {
-    width: 315.92px;
-    height: 570.64px;
-    top: 0.12px;
-    left: 1006.91px;
-    gap: 0px;
-    opacity: 0px;
-  }
+  } */
   .gallery-button-container {
     margin-top: 59px;
   }
 }
 
-.about {
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 48px;
-}
-.about__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.about__title {
-  width: 310px;
-  height: 132px;
-  top: 48px;
-  left: 16px;
-  gap: 0px;
-  opacity: 0px;
-
-  text-align: center;
-  color: rgba(211, 37, 35, 1);
-  margin: auto;
-  text-transform: uppercase;
-  margin-bottom: 32px;
-
-  font-family: Luckiest Guy;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 44px;
-  text-align: center;
-}
-.about__wrapper--top {
-  min-width: 343px;
-  gap: 20px;
-}
-.about__text-bold {
-  font-family: Quicksand;
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 36px;
-  letter-spacing: 0.01em;
-  text-align: left;
-  padding-bottom: 20px;
-}
-.about__text {
-  font-family: Quicksand;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 36px;
-  letter-spacing: 0.01em;
-  text-align: left;
-  padding-bottom: 20px;
-}
-.about__image-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-.about-image-one {
-  width: 283px;
-  height: 309.75px;
-
-  margin: 47px;
-}
-.about-image-button {
-  padding-bottom: 40px;
-}
-@media screen and (min-width: 1200px) {
-  .about {
-    padding-left: 182;
-    padding-right: 182px;
-  }
-
-  .about__wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: row;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: start;
-    justify-content: space-between;
-    margin-bottom: 130px;
-  }
-  .about__wrapper--top {
-    margin-left: 182px;
-    margin-top: 105px;
-  }
-
-  .about__title {
-    font-family: Luckiest Guy;
-    font-size: 64px;
-    font-weight: 400;
-    line-height: 96px;
-    text-align: center;
-    width: 1046px;
-    height: 192px;
-    top: 80px;
-    left: 197px;
-    gap: 0px;
-    opacity: 0px;
-  }
-  .about__text-bold {
-    font-family: Quicksand;
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 36px;
-    letter-spacing: 0.01em;
-    text-align: left;
-    width: 636px;
-  }
-  .about__text {
-    font-family: Quicksand;
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 36px;
-    letter-spacing: 0.01em;
-    text-align: left;
-
-    width: 636px;
-  }
-
-  .about__image-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
-}
-
 .footer {
-  background: rgba(121, 1, 25, 1);
+  background: rgba(54, 56, 92, 1);
 }
 .footer-container {
   display: flex;
@@ -911,21 +787,23 @@ a {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .footer-text {
-  color: rgba(255, 255, 255, 1);
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.01em;
-  text-align: left;
-  color: rgba(255, 184, 0, 1);
+  /* text-align: left; */
+  color: rgba(98, 132, 209, 1);
+  text-align: center;
+
   row-gap: 8px;
 }
 .footer-texts {
   padding: 0 8px;
-  color: rgba(255, 184, 0, 1);
+  color: rgba(98, 132, 209, 1);
   font-family: Poppins;
   font-size: 14px;
   font-weight: 400;
@@ -935,12 +813,12 @@ a {
 }
 .footer-copyright {
   font-family: Poppins;
-  font-size: 14px;
+  color: rgba(255, 255, 255, 1);
+  font-family: Poppins;
+  font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0.01em;
-  text-align: left;
-  color: rgba(255, 255, 255, 1);
+  text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -987,19 +865,19 @@ a {
   flex-direction: column;
   align-items: start;
   padding: 107px 16px 76px;
+  background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
 }
 
-.policy-terms-title {
-  font-family: Luckiest Guy;
-  text-transform: uppercase;
+.policy-terms-title-image {
   margin: auto;
-  width: 302px;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 44px;
-  text-align: center;
-  color: rgba(211, 37, 35, 1);
-  padding-bottom: 40px;
+  margin-bottom: 20px;
+  width: 342px;
+  /* height: 44px; */
+}
+.policy-title-image {
+  margin: auto;
+  margin-bottom: 20px;
+  width: 255px;
 }
 .policy-terms-text-top-one {
   font-family: Quicksand;
@@ -1018,29 +896,31 @@ a {
   text-align: left;
 }
 .policy-terms-text {
-  font-family: Luckiest Guy;
+  font-family: Poppins;
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 36px;
   text-align: left;
   color: rgba(8, 38, 53, 1);
+
   padding-top: 48px;
   padding-bottom: 16px;
 }
 
 .policy-terms-text-one {
-  font-family: Quicksand;
+  font-family: Poppins;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0.01em;
   text-align: left;
-  color: rgba(21, 35, 44, 1);
+
+  color: rgba(36, 37, 36, 1);
 }
 
 .terms-list {
   list-style-type: disc;
-  font-family: Quicksand;
+  font-family: Poppins;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
@@ -1062,14 +942,19 @@ a {
     padding: 160px 182px;
     align-items: start;
   }
-  .policy-terms-title {
-    font-size: 64px;
-    font-weight: 400;
-    line-height: 96px;
-    text-align: center;
-    width: 454px;
+  .policy-title-image {
+    margin: auto;
+    margin-bottom: 20px;
+    width: 520px;
   }
 
+  .policy-terms-title-image {
+    margin: auto;
+    margin-bottom: 20px;
+    width: 342px;
+    /* height: 44px; */
+    width: 695px;
+  }
   .policy-terms-text-top-one {
     padding-bottom: 24px;
 
