--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,17 @@ a {
   -webkit-transition: left 0.3s ease;
   transition: left 0.3s ease;
 }
+.header-background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 100%;
+
+  z-index: -1;
+  -webkit-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+}
 .header.is-open .header__background {
   left: 0;
 }
@@ -221,12 +232,11 @@ a {
   font-size: 16px;
   font-weight: 900;
   line-height: 40px;
-  /* text-align: start; */
 }
 .navigation-link:hover,
 .navigation-link:focus,
 .navigation-link:active {
-  color: rgba(255, 184, 0, 1);
+  color: rgba(98, 132, 209, 1);
 }
 
 .header {
@@ -236,8 +246,6 @@ a {
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
   background-color: transparent;
-
-  /* background-color: rgba(242, 242, 254, 1); */
 }
 .header__background {
   position: absolute;
@@ -365,7 +373,7 @@ a {
   font-weight: 900;
   line-height: 40px;
   text-align: center;
-  color: rgba(255, 184, 0, 1);
+  color: rgba(98, 132, 209, 1);
 }
 
 .header.is-open {
@@ -385,8 +393,10 @@ a {
     align-items: center;
     width: 100%;
   }
+  .header-policy-terms {
+    background-color: transparent;
+  }
   .header {
-    /* background-color: inherit; */
     height: 100px;
     display: flex;
   }
@@ -438,7 +448,7 @@ a {
     -ms-flex: 1;
     flex: 1;
     gap: 50px;
-    /* margin-left: 233px; */
+
     margin: 48px auto;
     display: flex;
     justify-content: center;
@@ -462,7 +472,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /* width: 375px; */
+
   height: 780px;
   margin: auto;
 
@@ -533,24 +543,22 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
+  width: 370px;
 }
-
-@media screen and (min-width: 1000px) {
+.gallery__list {
+  max-width: 350px;
+}
+@media screen and (min-width: 1200px) {
   .gallery__list {
-    max-width: 750px;
-  }
-
-  .reviews__container {
-    gap: 40px;
+    max-width: 1296px;
   }
 }
-
 @media screen and (min-width: 1440px) {
   .gallery__list {
     max-width: 1296px;
   }
 }
-/*  */
 .play {
   background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
 }
@@ -565,7 +573,6 @@ a {
 }
 .play__image {
   width: 343px;
-  /* height: 472px; */
 
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
@@ -581,16 +588,6 @@ a {
 .play__list {
   width: 375px;
 }
-
-/* @media screen and (min-width: 1000px) {
-  .play__list {
-    max-width: 750px;
-  }
-
-  .play__container {
-    gap: 40px;
-  }
-} */
 
 @media screen and (min-width: 1200px) {
   .play-image-desk {
@@ -661,23 +658,18 @@ a {
     display: flex;
     margin: auto;
     width: 1440px;
-    /* height: 1406px; */
   }
 }
-
-/*  */
 
 .features {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /* padding-block: 60px; */
   background: linear-gradient(180deg, #bfdcfa 0%, #f2f2fe 50%, #bfdcfa 100%);
 }
 
 .features-image {
   width: 375px;
-  /* height: 1871px; */
 
   margin: 0 auto 0;
 }
@@ -703,7 +695,6 @@ a {
     display: flex;
     margin: auto;
     width: 1440px;
-    /* height: 1406px; */
   }
 }
 
@@ -758,14 +749,7 @@ a {
     gap: 0px;
     opacity: 0px;
   }
-  /* .slick-active .gallery__image {
-    width: 315.92px;
-    height: 570.64px;
-    top: 0.12px;
-    left: 1006.91px;
-    gap: 0px;
-    opacity: 0px;
-  } */
+
   .gallery-button-container {
     margin-top: 59px;
   }
@@ -795,7 +779,6 @@ a {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.01em;
-  /* text-align: left; */
   color: rgba(98, 132, 209, 1);
   text-align: center;
 
@@ -872,7 +855,6 @@ a {
   margin: auto;
   margin-bottom: 20px;
   width: 342px;
-  /* height: 44px; */
 }
 .policy-title-image {
   margin: auto;
@@ -952,7 +934,6 @@ a {
     margin: auto;
     margin-bottom: 20px;
     width: 342px;
-    /* height: 44px; */
     width: 695px;
   }
   .policy-terms-text-top-one {
